keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production-http01
spec:
  tls:
    - hosts:
        - auth.oddbit.com
      secretName: keycloak-cert
  rules:
    - host: auth.oddbit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
